--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN=your_bot_token_here
-ALLOWED_ROLE=Deployer
-ALLOWED_CHANNEL_ID=123456789012345678
+DISCORD_TOKEN=MTM3ODAyMDA1ODI1MjcwNTgwMg.GkmYwK.Rut-fYZ27L-Vg3E3TKzuBYb92GiH8UHtaFuFHo
+ALLOWED_ROLE=Owner 👑
+ALLOWED_CHANNEL_ID=1376519984590622820
