--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN=MTM3ODAyMDA1ODI1MjcwNTgwMg.GkmYwK.Rut-fYZ27L-Vg3E3TKzuBYb92GiH8UHtaFuFHo
+TOKEN=MTM3ODAyMDA1ODI1MjcwNTgwMg.GMNxMa.QdYKOsRpvJ6DYR2jZmc4gAFUUPHBzqbT2Vzp3I
 ALLOWED_ROLE=Owner 👑
 ALLOWED_CHANNEL_ID=1376519984590622820
