--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTM3ODAyMDA1ODI1MjcwNTgwMg.GMNxMa.QdYKOsRpvJ6DYR2jZmc4gAFUUPHBzqbT2Vzp3I
+TOKEN=MTM3ODAyMDA1ODI1MjcwNTgwMg.GjN8Kf.em_ZgWB2vqRoMdLDogdR7IBii4N73nx_b1im4Q
 ALLOWED_ROLE=Owner 👑
 ALLOWED_CHANNEL_ID=1376519984590622820
